--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ pandas==2.1.4
 openpyxl==3.1.2
 et-xmlfile==1.1.0
 python-dateutil==2.8.2
-pytz==2023.3.4
+pytz
 six==1.16.0
 
 msoffcrypto-tool==5.0.1
