--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,15 @@
-
-Flask==3.0.0
+Flask==3.0.0Add commentMore actions
+pandas==2.1.4
+openpyxl==3.1.2
+msoffcrypto-tool==5.0.1
 Werkzeug==3.0.1
 Jinja2==3.1.2
 MarkupSafe==2.1.3
 itsdangerous==2.1.2
 click==8.1.7
 blinker==1.7.0
-
-pandas
-openpyxl==3.1.2
-et-xmlfile==1.1.0
 python-dateutil==2.8.2
-pytz
+pytz==2023.3
 six==1.16.0
-
-msoffcrypto-tool==5.0.1
-cryptography>=41.0.0,<43.0.0
-gunicorn==21.2.0
+et-xmlfile==1.1.0
+cryptography==41.0.8
